@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1013 2009-03-20 19:01:34 castaglia Exp $
+$Id: NEWS,v 1.1014 2009-03-23 01:59:21 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -84,6 +84,8 @@ CVS
   RewriteCondition and RewriteRules can now contain "%{ENV:var}" style
   strings for environment variable substitution.
 - Bug 3221 - Command line defines (-D/--define) are lost on SIGHUP.
+- Bug 3028 - Unable to escape special characters in RewriteRule substitution
+  string.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
